appsmith/appsmith-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appsmith
  labels:
    app.kubernetes.io/name: appsmith
    app.kubernetes.io/managed-by: kubectl
