appsmith/appsmith-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsmith
  namespace: appsmith
  labels:
    app.kubernetes.io/name: appsmith
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: appsmith
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appsmith
        app.kubernetes.io/component: management
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - image: appsmith/appsmith-ce:v1.8.15 
          name: appsmith
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /appsmith-stacks
              name: stacks
      volumes:
        - name: stacks
          nfs:
            path: /export/Kubernetes/appsmith/stacks
            server: 192.168.86.107
