appsmith/appsmith-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsmith
  namespace: appsmith
  labels:
    app.kubernetes.io/name: appsmith
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: appsmith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
