appsmith/appsmith-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: appsmith
  namespace: appsmith
  labels:
    app.kubernetes.io/name: appsmith
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`appsmith.albinmedoc.se`)
      kind: Rule
      services:
        - name: appsmith
          port: 80
